# promtior-roombooking-challenge

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
app/: auth.py  clock.py  config.py  main.py
app/agent/: agent.py  tools.py
app/booking/: db.py  models.py  service.py
app/static/: backoffice.html  index.html
doc/: ARCHITECTURE.md  DECISIONS.md  PROJECT_OVERVIEW.md  architecture-diagram.html  notebook.ipynb
tests/: conftest.py  test_api.py  test_clock.py  test_service.py  test_tools.py
