[project]
name = "roombooking"
version = "0.1.0"
description = "Meeting-room booking chatbot with tool calling — Promtior technical challenge"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "langchain>=1.0,<2",
    "langchain-openai>=1.0,<2",
    "langgraph>=1.0,<2",
    "pyjwt>=2.9",
    "bcrypt>=4.2",
    "pydantic-settings>=2.5",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
